--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   pihole-unbound:
     build: .
     container_name: pihole-unbound
+    hostname: pihole-unbound
     image: pihole-unbound:latest
     ports:
       - "53:53/tcp"
